[gd_scene load_steps=9 format=3 uid="uid://bmke88h6lebel"]

[ext_resource type="Script" path="res://projectiles/lasers/red_laser.gd" id="1_kbcaq"]
[ext_resource type="Material" uid="uid://bhwosssphve8" path="res://resources/particles/laser_casting_particles.tres" id="2_gdktj"]
[ext_resource type="Material" uid="uid://c8r5m4n7colab" path="res://resources/particles/laser_impact_particles.tres" id="2_wvfa3"]
[ext_resource type="Texture2D" uid="uid://b2gagvgpvrjud" path="res://assets/sprite_projectiles/bullet_pixel_BrightRed.png" id="3_3sktt"]
[ext_resource type="Texture2D" uid="uid://pvrjdm745q8m" path="res://assets/sprite_projectiles/bullet_pixel_DarkRed.png" id="3_12el5"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2rc1a"]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id="AtlasTexture_4am2d"]
atlas = ExtResource("3_3sktt")
region = Rect2(231, 7, 4, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsojq"]
atlas = ExtResource("3_12el5")
region = Rect2(182, 22, 5, 5)

[node name="red_laser" type="Area2D"]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("1_kbcaq")

[node name="RayCast2D" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="Line2D" type="Line2D" parent="."]
modulate = Color(2.5, 0.2, 0.2, 1)
points = PackedVector2Array(0, 0, 0, 50)
width = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_2rc1a")

[node name="CastingParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = ExtResource("2_gdktj")
texture = SubResource("AtlasTexture_4am2d")
lifetime = 0.4

[node name="ImpactParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = ExtResource("2_wvfa3")
texture = SubResource("AtlasTexture_xsojq")
lifetime = 0.2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
